k8s/pod-nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    app: webservice
spec:
  containers:
  - name: nginx-container
    image: nginx:stable-perl
    ports:
    - containerPort: 80
