k8s/svc-traefik.yaml
---
kind: Service
apiVersion: v1
metadata:
 name: traefik
 namespace: traefik
 annotations: {}
   service.beta.kubernetes.io/aws-load-balancer-internal: 0.0.0.0/0
spec:
 selector:
   k8s-app: webservice
 ports:
 - protocol: TCP
   port: 80
   name: http
 - protocol: TCP
   port: 443
   name: https
 type: LoadBalancer
