k8s/ingress-nginx.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    traefik.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: maxim.ru
    http:
      paths:
      - path: /
        #pathType: Prefix
        backend:
          service.name: service-for-nginx
          service.port.number: 80
